--- a/templates/settings.html
+++ b/templates/settings.html
@@ -5,6 +5,30 @@
 {% block content %}
 <div class="row">
     <div class="col-md-8">
+        <!-- Account Information Card -->
+        <div class="card mb-4">
+            <div class="card-header bg-info text-white">
+                <h5><i class="fas fa-user"></i> Account Information</h5>
+            </div>
+            <div class="card-body">
+                <div class="row">
+                    <div class="col-sm-4">
+                        <strong>Current Username:</strong>
+                    </div>
+                    <div class="col-sm-8">
+                        <span class="badge bg-primary">{{ current_username }}</span>
+                    </div>
+                </div>
+                <hr>
+                <div class="d-grid gap-2 d-md-flex justify-content-md-end">
+                    <a href="{{ url_for('change_credentials') }}" class="btn btn-warning btn-sm">
+                        <i class="fas fa-user-edit"></i> Change Username & Password
+                    </a>
+                </div>
+            </div>
+        </div>
+        
+        <!-- Twilio Configuration Card -->
         <div class="card">
             <div class="card-header">
                 <h5><i class="fas fa-cog"></i> Twilio Configuration</h5>
@@ -26,7 +50,7 @@
                     </div>
                     
                     <button type="submit" class="btn btn-primary">
-                        <i class="fas fa-save"></i> Save Configuration
+                        <i class="fas fa-save"></i> Save Twilio Configuration
                     </button>
                 </form>
             </div>
