--- a/templates/settings.html
+++ b/templates/settings.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Settings - Twilio Bulk SMS{% endblock %}
+{% block title %}Settings - GMADP{% endblock %}
 
 {% block content %}
 <div class="row">
