--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Dashboard - Twilio Bulk SMS{% endblock %}
+{% block title %}Dashboard - GMADP{% endblock %}
 
 {% block content %}
 {% if session.username == 'admin' %}
