--- a/templates/login.html
+++ b/templates/login.html
@@ -1,13 +1,14 @@
 {% extends "base.html" %}
 
-{% block title %}Login - Twilio Bulk SMS{% endblock %}
+{% block title %}Login - GMADP{% endblock %}
 
 {% block content %}
 <div class="row justify-content-center">
     <div class="col-md-6 col-lg-4">
         <div class="card shadow">
-            <div class="card-header bg-primary text-white text-center">
-                <h4><i class="fas fa-sign-in-alt"></i> Login</h4>
+            <div class="card-header bg-primary text-white text-center py-4">
+                <img src="{{ url_for('static', filename='images/gmadp-logo.png') }}" alt="GMADP Logo" class="login-logo mb-3">
+                <h4><i class="fas fa-sign-in-alt"></i> Login to GMADP</h4>
             </div>
             <div class="card-body">
                 <form method="POST">
