Dev: app improvements + UI updates

--- a/templates/campaign_status.html
+++ b/templates/campaign_status.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Campaign Status - GMADP{% endblock %}
+{% block title %}Campaign Status - Twilio Bulk SMS{% endblock %}
 
 {% block content %}
 <div class="row">
