--- a/templates/change_credentials.html
+++ b/templates/change_credentials.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Change Credentials - GMADP{% endblock %}
+{% block title %}Change Credentials - Twilio Bulk SMS{% endblock %}
 
 {% block content %}
 <div class="row">
