--- a/templates/login.html
+++ b/templates/login.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Login - GMADP{% endblock %}
+{% block title %}Login - Twilio Bulk SMS{% endblock %}
 
 {% block content %}
 <div class="row justify-content-center">
@@ -25,9 +25,6 @@
                         </button>
                     </div>
                 </form>
-            </div>
-            <div class="card-footer text-center text-muted">
-                <small>Default: admin / admin123</small>
             </div>
         </div>
     </div>
