Dev: added logo on dashboard and added auto reply code

--- a/templates/campaign_status.html
+++ b/templates/campaign_status.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Campaign Status - Twilio Bulk SMS{% endblock %}
+{% block title %}Campaign Status - GMADP Communication Platform{% endblock %}
 
 {% block content %}
 <div class="row">
