--- a/templates/send_sms.html
+++ b/templates/send_sms.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Send SMS - Twilio Bulk SMS{% endblock %}
+{% block title %}Send SMS - GMADP Communication Platform{% endblock %}
 
 {% block content %}
 <div class="row">
