--- a/templates/base.html
+++ b/templates/base.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{% block title %}Twilio Bulk SMS SER{% endblock %}</title>
+    <title>{% block title %}GMADP Communication Platform{% endblock %}</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     <link href="{{ url_for('static', filename='css/style.css') }}" rel="stylesheet">
@@ -12,7 +12,8 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
         <div class="container">
             <a class="navbar-brand" href="{{ url_for('dashboard') }}">
-                <i class="fas fa-sms"></i> Twilio Bulk SMS
+                <img src="{{ url_for('static', filename='images/gmadp-logo.png') }}" alt="GMADP Logo" height="40" class="me-2">
+                GMADP Communication Platform
             </a>
             
             {% if session.user_id %}
@@ -29,6 +30,11 @@
                     <li class="nav-item">
                         <a class="nav-link" href="{{ url_for('send_sms') }}">
                             <i class="fas fa-paper-plane"></i> Send SMS
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ url_for('inbound_messages') }}">
+                            <i class="fas fa-inbox"></i> Inbound
                         </a>
                     </li>
                     <li class="nav-item">
