--- a/templates/login.html
+++ b/templates/login.html
@@ -1,13 +1,15 @@
 {% extends "base.html" %}
 
-{% block title %}Login - Twilio Bulk SMS{% endblock %}
+{% block title %}Login - GMADP Communication Platform{% endblock %}
 
 {% block content %}
 <div class="row justify-content-center">
     <div class="col-md-6 col-lg-4">
         <div class="card shadow">
             <div class="card-header bg-primary text-white text-center">
+                <img src="{{ url_for('static', filename='images/gmadp-logo.png') }}" alt="GMADP Logo" height="60" class="mb-2">
                 <h4><i class="fas fa-sign-in-alt"></i> Login</h4>
+                <p class="mb-0 small">GMADP Communication Platform</p>
             </div>
             <div class="card-body">
                 <form method="POST">
