--- a/templates/settings.html
+++ b/templates/settings.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Settings - Twilio Bulk SMS{% endblock %}
+{% block title %}Settings - GMADP Communication Platform{% endblock %}
 
 {% block content %}
 <div class="row">
@@ -23,6 +23,24 @@
                 <div class="d-grid gap-2 d-md-flex justify-content-md-end">
                     <a href="{{ url_for('change_credentials') }}" class="btn btn-warning btn-sm">
                         <i class="fas fa-user-edit"></i> Change Username & Password
+                    </a>
+                </div>
+            </div>
+        </div>
+        
+        <!-- Auto-Reply Configuration Card -->
+        <div class="card mb-4">
+            <div class="card-header bg-success text-white">
+                <h5><i class="fas fa-reply"></i> Auto-Reply Settings</h5>
+            </div>
+            <div class="card-body">
+                <p>Configure automatic replies for inbound SMS messages.</p>
+                <div class="d-grid gap-2 d-md-flex justify-content-md-end">
+                    <a href="{{ url_for('settings_auto_reply') }}" class="btn btn-success btn-sm">
+                        <i class="fas fa-cog"></i> Configure Auto-Reply
+                    </a>
+                    <a href="{{ url_for('inbound_messages') }}" class="btn btn-outline-success btn-sm">
+                        <i class="fas fa-inbox"></i> View Inbound Messages
                     </a>
                 </div>
             </div>
